frontend/tests/cases/negative/holes/hole1.gr
foo : forall {n : Nat, m : Nat} . Int [m] -> Int [n] -> Int [n*m]
foo [x] [y] = ?